fix(story-rows): Fix missalign on story rows

--- a/app/modules/epics/dashboard/story-row/story-row.scss
+++ b/app/modules/epics/dashboard/story-row/story-row.scss
@@ -31,7 +31,7 @@
         }
     }
     .name {
-        flex-basis: 17.5vw;
+        flex-basis: 16vw;
         a {
             cursor: pointer;
 
